# Vins-with-IMU-NN

./: README.md
ar_demo/: CMakeLists.txt
benchmark_publisher/: CMakeLists.txt
camera_model/: CMakeLists.txt
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/chessboard/: Chessboard.cc
config/: vins_rviz_config.rviz
config/advio/: advio.yaml
config/euroc/: euroc_config.yaml
config/iphone12/: iphone12.yaml
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  pose_graph.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: advio.launch  debug_test.launch  euroc.launch  iphone12.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp
vins_estimator/src/factor/: imu_factor.h  imu_neural_netwrok_base.h  imu_neuralnetwork_factor.h  integration_base.h
vins_estimator/src/utility/: visualization.cpp
